[package]
name = "dt_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = "0.13.0"
decision_transformer_dfdx = {path = "../decision_transformer_dfdx"}
rand = "0.8.5"
num-traits = "0.2.19"
rand_distr = "0.4.3"
